--- a/_config.yml
+++ b/_config.yml
@@ -103,6 +103,6 @@ theme: landscape
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/gigizhaoo/gigizhaoo.github.io
+  repo: git@github.com:gigizhaoo/gigizhaoo.github.io.git
   branch: gh-pages
 
